# expvm1

./: CMakeLists.txt  README.md  fix_brackets.py  instructions.md  ops.txt  test_brackets.asm  test_call_only.asm  test_call_page_simple.asm  test_da.asm  test_da_dispatch.asm  test_da_error.asm  test_in_byte.asm  test_in_default.asm  test_in_keyword.asm  test_invalid_brackets.asm  test_jmp_page.asm  test_just_halt.asm  test_page.asm  test_page_data_access.asm  test_page_default.asm  test_page_duplicate.asm  test_page_injection.asm  test_page_optimization.asm  test_page_overflow.asm  test_page_verification.asm  test_simple_page.asm  test_subroutine_page.asm
.github/: copilot-instructions.md
examples/: hello.asm
include/: alu.h  cpu.h  lvm.h  memsize.h  opcodes.h  stack.h  vm.h
specification/: Architecture.md  PendragonOperations.md  PendragonVirtualMachine.md  ROADMAP_V1.1.md  SystemCalls.md
specification/Assembler/: Architecture.md  BRACKET_SYNTAX_CORRECTION_PLAN.md  DOCUMENTATION_UPDATE_SUMMARY.md  DocumentationTestingPlan.md  PROGRESS.md  basuc_definitions.txt
specification/Assembler/Reference/: BinaryFormat.md  ErrorReference.md  Examples.md  Expressions.md  InstructionSet.md  Overview.md  Registers.md  Syntax.md
specification/Reference/: ALU.md  CPU.md  Helpers.md  InstructionUnit.md  Register.md  Stack.md  VMemUnit.md
specification/reference/: ALU.md  CPU.md  InstructionUnit.md  Register.md  Stack.md  VMemUnit.md
specifications/: BinaryLoading.md  UseOfBrackets.md  binary-format.md  hello.asm  issue 1 .md  mem_unit.md
src/: cpu.cpp  flags.cpp  instruction_unit.cpp  main.cpp  mem_access.cpp  register.cpp  stack.cpp  stack_access.cpp  vm.cpp
src/alu/: CMakeLists.txt  alu.cpp
src/alu/include/: alu.h  ialu.h
src/assembler/: CMakeLists.txt
src/assembler/codegen/: address_resolver.cpp  address_resolver.h  binary_writer.cpp  binary_writer.h
src/assembler/ir/: code_graph.cpp  code_graph.h  code_graph_builder.cpp  code_graph_builder.h
src/assembler/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/assembler/parser/: ast.cpp  ast.h  parser.cpp  parser.h
src/assembler/semantic/: instruction_rewriter.cpp  instruction_rewriter.h  semantic_analyzer.cpp  semantic_analyzer.h  symbol_table.cpp  symbol_table.h
src/assembler/tests/: test_binary_writer.cpp  test_codegen.cpp  test_lexer.cpp  test_parser.cpp  test_semantic.cpp
src/basic_io/: CMakeLists.txt  basic_io.cpp
src/basic_io/include/: basic_io.h  basic_io_accessor.h  ibasic_io.h
src/basic_io/tests/: basic_io_tests.cpp
src/cpu/: CMakeLists.txt  cpu.cpp  cpu_alu_ops.cpp
src/cpu/include/: cpu.h
src/helpers/: CMakeLists.txt  helpers.cpp
src/helpers/include/: errors.h  helpers.h
src/instruction_unit/: CMakeLists.txt  instruction_unit.cpp  instruction_unit_access.cpp
src/instruction_unit/include/: iinstruction_unit.h  instruction_unit.h  opcodes.h  systemcalls.h
src/instruction_unit/tests/: instruction_unit_tests.cpp
src/memunit/: CMakeLists.txt  context.cpp  memory.cpp  memunit.cpp  paged_memory_accessor.cpp  stack_accessor.cpp  vmemunit.cpp
src/memunit/include/: accessMode.h  context.h  ivmemunit.h  mem_access.h  memory.h  memsize.h  memunit.h  paged_memory_accessor.h  stack_accessor.h  vaddr.h  vmemunit.h
src/memunit/tests/: memory2_tests.cpp  memunit_tests.cpp  paged_memory_accessor_tests.cpp  stack_accessor_tests.cpp
src/register/: CMakeLists.txt  register.cpp
src/register/include/: flags.h  register.h
src/register/tests/: register_tests.cpp
src/stack/: CMakeLists.txt  stack.cpp  stack_access.cpp  stack_new.cpp
src/stack/include/: istack.h  stack.h
src/stack/tests/: stack_new_tests.cpp  stack_subroutine_tests.cpp  stack_tests.cpp
src/vm/: CMakeLists.txt  binary_loader.cpp  vm.cpp
src/vm/include/: binary_loader.h  vm.h
src/vm/tests/: CMakeLists.txt  binary_loader_tests.cpp
test/: simple.asm  test_hello.asm  test_instructions.asm  test_subregs.asm
tests/: alu_tests.cpp  stack_tests.cpp  sugar_syntax_test.asm  test_main.cpp
tests/documentation/: COVERAGE_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  run_doc_tests.sh
tests/documentation/results/: 01_hello_world.err  02_basic_arithmetic.err  03_countdown_loop.err  04_sum_loop.err  05_register_basic.err  06_sum_array.err  07_string_length.err  08_count_up.err  09_square_function.err  100_register_swapping.err  101_nop_instruction.err  102_halt_instruction.err  103_jmp_instruction.err  104_jpz_instruction.err  105_jpnz_loop.err  106_jpc_instruction.err  107_jps_instruction.err  108_call_ret.err  109_ld_immediate.err  10_division_remainder.err  110_swp_instruction.err  111_ldh_instruction.err  112_ldl_instruction.err  113_lda_variants.err  114_ldab_instruction.err  115_array_maximum.err  116_string_length.err  117_square_function.err  118_add_function.err  119_register_preservation.err  11_memory_swap.err  120_memory_swap_example.err  121_shift_mult_div.err  122_bit_field_extract.err  123_circular_rotation.err  124_pushw_immediate.err  125_pushb_immediate.err  126_peek_stack.err  127_flsh_stack.err  128_page_instruction.err  (+126 more)
tests/documentation/testable/quick/: 01_hello_world.asm  02_basic_arithmetic.asm  03_countdown_loop.asm  04_sum_loop.asm  05_register_basic.asm  06_sum_array.asm  07_string_length.asm  08_count_up.asm  09_square_function.asm  100_register_swapping.asm  101_nop_instruction.asm  102_halt_instruction.asm  103_jmp_instruction.asm  104_jpz_instruction.asm  105_jpnz_loop.asm  106_jpc_instruction.asm  107_jps_instruction.asm  108_call_ret.asm  109_ld_immediate.asm  (+147 more)
tests/vm_behavior/: README.md  run_comparison_tests.sh
tests/vm_behavior/comparison/: ANALYSIS.md  FINDINGS.md  cmp_negative_range.asm  cmp_negative_vs_positive.asm  cmp_signed_boundaries.asm  cmp_signed_test.asm  cmp_sorting_scenario.asm  cmp_variant_consistency.asm  simple_debug.asm  test_cmp_with_debug.asm  test_debug_syscall.asm  test_debug_working.asm  test_large.asm  test_sys_encoding.asm
text_adventure/: advent.asm
tools/: asm.cpp  create_binary.cpp  create_binary_with_data.cpp  create_hello_world.cpp  test_parser.cpp
